Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98896

Double behaviors on same property crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.6.0
    • 6.2, 6.3, 6.5.0, 6.6
    • None
    • 163443c6f (dev)

    Description

      When the QML file contains 2 Behavior elements for the same property, application crashes. Simple example:

      import QtQuick
      import QtQuick.Window
      Window {
        width: 640
        height: 480
        visible: true
        Rectangle {
          width: 100
          height: 100
          color: "red"
          Behavior on width {
            NumberAnimation {
              duration: 500
            }
          }
          Behavior on width {
            NumberAnimation {
              duration: 500
            }
          }
        }
      }
      

       

      Debugger output:

      1
      2 QQuickAnchors::resetCenterIn Qt6Quickd 0x7ffe0e311ae6 
      3 QQuickAnchors::resetCenterIn Qt6Quickd 0x7ffe0e313879 
      4 QQuickAnchors::resetCenterIn Qt6Quickd 0x7ffe0e310bbd 
      5 QV4::Value::fromHeapObject Qt6Qmld 0x7ffe12f7b671 
      6 QV4::Value::fromHeapObject Qt6Qmld 0x7ffe12f79594 
      7 QV4::Value::fromHeapObject Qt6Qmld 0x7ffe12f77e13 
      8 QV4::Value::fromHeapObject Qt6Qmld 0x7ffe12f76a58 
      9 QV4::Value::fromHeapObject Qt6Qmld 0x7ffe12f79d5a
       
      

       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-98896
          # Subject Branch Project Status CR V

          Activity

            People

              mikolaj.boc Mikołaj Boc (Inactive)
              kagro Kaj Grönholm
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There is 1 open Gerrit change