Correctly discover metaType for UntypedProxyProperty

When attempting to set two behaviors on the same property, the second
behavior's target property gets intercepted by the first behavior. Then,
meta type for UntypedProxyPropertyBindable in UntypedProxyProperty's ctor
will not be discovered correctly, since UntypedProxyPropertyBindable
interface's metaType is explicitly set to nullptr. Use
QUntypedBindable::metaType instead to access MetaTypeAccessorFlag
via iface->getter.

A warning shall also be reported in case two or more interceptors are
set on the same property.

Fixes: QTBUG-98896
Change-Id: Ie38ae75235e000e25a60a1c2ccaad70a46f5018e
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>